Fix z-index issue on navbar

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,6 +41,7 @@
     position: sticky;
     top: 0;
     padding: 8px 16px;
+    z-index: 1;
 
     &__title {
         flex: 1;
